Fix Ajout d'un flex wrap sur les tags de la lodgings afin de ne pas dépasser le viewport.
Modification de l'animation des dropdown avec utilisation d'un container et d'une méthode utilisant un grid a 1 seul ligne qui s’enlève.

Rajout du responsive mobile sur la banner qui avait un souci suite a la modification liée à l'opacitée du background.

--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -53,6 +53,9 @@
         @include m.background;
         background: rgba(0, 0, 0, 0.6);
 
+        @include m.responsive(mobile) {
+            border-radius: 10px;
+        }
     }
 }
 
@@ -61,5 +64,8 @@
         @include m.background;
         background: rgba(0, 0, 0, 0.3);
 
+        @include m.responsive(mobile) {
+            border-radius: 10px;
+        }
     }
 }
