--- a/src/components/DropDown/DropDown.module.scss
+++ b/src/components/DropDown/DropDown.module.scss
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    overflow: hidden;
 
     .dropDown_top {
         @include m.flex-center;
@@ -23,7 +22,8 @@
 
         img {
             cursor: pointer;
-            transition: transform 0.5s ease-in-out;
+            transform: rotate(180);
+            transition: transform 0.4s linear;
         }
 
         @include m.responsive(mobile) {
@@ -32,36 +32,32 @@
         }
     }
 
-    p,
-    ul {
-        padding-left: 15px;
-        padding-top: 15px;
-        max-width: calc(100% - 15px);
+    // Conteneur de l'animation d'expansion/repli
+    .wrapper {
+        display: grid;
+        grid-template-rows: 0fr;
+        transition: grid-template-rows 0.4s linear;
+
+        // Modifier pour l'état ouvert
+        &.is_open {
+            grid-template-rows: 1fr;
+        }
     }
 
-    .show {
-        max-height: 100vh;
-        transition: opacity 1.5s ease, transform 1.5s ease, max-height 2s ease;
-        opacity: 1;
-        transform: translateY(0);
-    }
+    // Pour masquer le débordement lors de l'animation
+    .inner {
+        overflow: hidden;
 
-    .hide {
-        max-height: 0;
-        opacity: 0;
-        transform: translateY(-20px);
-        transition: opacity 1.5s ease, transform 1.5s ease, max-height 2s ease-in-out;
-        position: relative;
-        z-index: 0; //Permet de ne pas avoir le texte au dessus de la fleche meme en max heigth 0
-    }
-
-    .arrow {
-        transition: transform 2s ease-in-out;
+        p,
+        ul {
+            padding-left: 15px;
+            padding-top: 15px;
+            max-width: calc(100% - 15px);
+        }
     }
 
     .rotated {
         transform: rotate(180deg);
-
     }
 
     @include m.responsive(mobile) {
