--- a/src/pages/Lodging/Lodging.module.scss
+++ b/src/pages/Lodging/Lodging.module.scss
@@ -29,6 +29,7 @@
             .tags {
                 display: flex;
                 flex-direction: row;
+                flex-wrap: wrap;
                 gap: 10px;
             }
 
